feat: Request/Response Transformation
